--- a/src/views/preview/comment/comment.scss
+++ b/src/views/preview/comment/comment.scss
@@ -4,6 +4,10 @@
     margin-left: .5rem;
     width: 100%;
 
+    .full-width-form {
+        width: 100%;
+    }
+
     .compose-error-row {
         width: 100%;
         justify-content: flex-start;
